# pjenergy

./: .gitignore  README.md  Tutorial_Geração_de_gráficos.ipynb  Tutorial_Obtenção_de_dados.ipynb  Velocidade_Tabela_Probabilidades_Weibull.csv  environment.yml  main.py  main_provisorio.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
ORGANIZACAO_ANTIGA/: main.py
ORGANIZACAO_ANTIGA/dataframes/: edita_dataframe.py  gera_dat.py  ler_dataframe.py  salva_dataframe_substituindo.py
ORGANIZACAO_ANTIGA/probability_distribution/: INFO.txt
ORGANIZACAO_ANTIGA/utils - antigo/: INFO.txt  caso_zero.py  pressao_para_altura.py  traduzir_para_ingles.py
ORGANIZACAO_ANTIGA/wind_profiles/: numero_linhas_colunas.py
Obtenção_de_dados/: Geração_Dataframe_Vento.ipynb  Obtenção_Dados_Vento.ipynb
data/: INFO.txt
data/dados_interpolados/: INFO
data/dataframe_ventos/: INFO
data/nc_files/: (var-geopotential)_(anos-2016)_(pressao-900).nc  (var-geopotential)_(anos-2016)_(pressao-950).nc  (var-geopotential)_(anos-2017)_(pressao-1000).nc  (var-geopotential)_(anos-2017)_(pressao-925).nc  (var-geopotential)_(anos-2017)_(pressao-975).nc  (var-geopotential)_(anos-2018)_(pressao-1000).nc  (+113 more)
docs/: Tutorial_descritivo_dos_códigos.md  convencoes.md  tutorial_descritivo_dos_codigos.md
src/: Perguntas2.ipynb  criacao_grafico.py  dataframe_media.py  iteracao_graficos.py  numero_linhas_colunas.py  perguntas.py  perguntas2.py  simplifica.py  simplifica_funcao.py  tabela_interpolacao.py  usuario.py  valores_nao_aceitos.py
src/auxiliares/: caso_zero.py  (+4 more)
tests/: test_exemplo.py
(+511 files in other folders)
