[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pjenergy"
version = "0.1.1"
description = "Projeto de análise energética"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
